@@ -13,8 +13,7 @@ setenv =
 [testenv:cov]
 deps = -r{toxinidir}/test-requirements.txt
 commands =
-    pytest --cov=concrete {posargs:tests}
-    -coverage xml -o {toxinidir}/coverage.xml
+    pytest --cov=concrete {posargs:tests} --cov-report=xml:{toxinidir}/coverage.xml
 setenv =
     PYTHONPATH = {toxinidir}
 
